--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,6 +268,10 @@ pre code.hljs {
 		}
 		.post-content {
 			padding: 1em 0;
+
+      p {
+        text-align: justify;
+      }
 		}
 		.tags {
 			font-size: 0.9em;
